samples/_failures_safe/1761480855_e26110_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ae2dd19.c: In function ‘main’:
./samples/SAFE/__tmp_1ae2dd19.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
